--- a/Day_097_HW_Keras_CNN_vs_DNN.ipynb
+++ b/Day_097_HW_Keras_CNN_vs_DNN.ipynb
@@ -396,8 +396,8 @@
         "1. 請試著調整各個超參數，並說明那些超參數對於結果有明顯的影響?\n",
         "> 見下方程式區塊說明\n",
         "2. CNN 與 DNN 哪個模型的參數數量比較多? 造成參數的數量不同的原因在哪?\n",
-        "> 就本次範例程式中, DNN模型的總參數數量較多;<br>\n",
-        "> 實際上影響模型參數數量的原因有很多, DNN中的Dense層數及neuron數目, CNN中的層數, kernel size, filter number等,..都會影響最終模型的總參數數量"
+        "> DNN模型的總參數數量較多;<br>\n",
+        "> CNN提取input的feature傳給下一層進行學習, 而DNN則是全部傳遞, 故有較多參數<br>"
       ]
     },
     {
@@ -407,9 +407,7 @@
       },
       "source": [
         "## 超參數調整如下:\r\n",
-        "1. 更換優化器為Adam\r\n",
-        "2. Dense layer的 neuron數量增加 (至1024)\r\n",
-        "3. 增加epoch 數量 (至20)\r\n",
+        "嘗試調整的超參數包含optimizer, learning rate, Conv2D 層數, filter 層數及大小, stride等...<br> 最終發現`優化器的選擇`對於最終模型的準確率有較大的影響\r\n",
         "\r\n"
       ]
     },
