--- a/Day_100_HW_transfer_learning.ipynb
+++ b/Day_100_HW_transfer_learning.ipynb
@@ -7,7 +7,7 @@
       "display_name": "Python 3"
     },
     "colab": {
-      "name": "Day100_HW_transfer_learning.ipynb",
+      "name": "Day_100_HW_transfer_learning.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -36,8 +36,14 @@
       },
       "source": [
         "## 結果\r\n",
-        "將regulizer換成L1_L2 ,並在以下條件下找到最佳準確度0.86:\r\n",
+        "本次作業使用模型訓練功能包含\r\n",
         "\r\n",
+        "\t1. 資料擴增(增強)\r\n",
+        "\t2. 修改ResNet 網路架構 (將regulizer換成l1_l2)\r\n",
+        "\t3. 學習率動態調整\r\n",
+        "並在以下超參數條件下得到最佳準確度0.86 :\r\n",
+        "\r\n",
+        "Batch size=256 <br>\r\n",
         "epoch=50<br>\r\n",
         "Learining Rate = 0.01<br>\r\n",
         "L1 ratio = 1e-6<br>\r\n",
@@ -203,7 +209,7 @@
         "    model = Model(inputs=inputs, outputs=outputs)\r\n",
         "    return model"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +223,7 @@
         "from keras.optimizers import Adam\n",
         "from keras.utils import to_categorical\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +249,7 @@
         "y_train = to_categorical(y_train, 10)\n",
         "y_test = to_categorical(y_test, 10)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +278,7 @@
         "model = resnet(input_shape=(32,32,3)) \n",
         "model.summary()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +533,7 @@
         "print('Test loss:', score[0])\n",
         "print('Test accuracy:', score[1])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +625,7 @@
         "from keras.regularizers import l1_l2\r\n",
         "from keras.preprocessing.image import ImageDataGenerator"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,7 +772,7 @@
         "    model = Model(inputs=inputs, outputs=outputs)\r\n",
         "    return model"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -783,7 +789,7 @@
         "L1_EXP = [0, 1e-6]\r\n",
         "L2_EXP = [0, 1e-6]\r\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -833,7 +839,7 @@
         "      'train_acc': train_acc,\r\n",
         "      'valid_acc': valid_acc}\r\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1713,7 +1719,7 @@
         "plt.legend(loc='center left', bbox_to_anchor=(1, 0.5))\r\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1751,7 +1757,7 @@
       "source": [
         ""
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1774,7 +1780,7 @@
       "source": [
         ""
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     }
   ]
